[tool.poetry]
name = "python-energy-test"
version = "0.1.0"
description = ""
authors = ["andrei-calin-dragomir <andrei.calin.dragomir@gmail.com>"]
readme = "README.md"
packages = [{include = "python_energy_test"}]

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^3.0.11"
pyJoules = "^0.5.1"
h5py = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
