[tool.poetry]
name = "python-energy-test"
version = "0.1.0"
description = ""
authors = ["andrei-calin-dragomir <andrei.calin.dragomir@gmail.com>"]
readme = "README.md"
packages = [{include = "python_energy_test"}]

[tool.poetry.dependencies]
python = "^3.9"
pyJoules = "^0.5.1"
h5py = "^3.11.0"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
